# AudioCompressor

./: .gitignore  CMakeLists.txt  README.md
include/: curve.h  list.h  processor.h
include/Curves/: sine_curve.h
src/: list.c  main.c  processor.c
src/Curves/: sine_curve.c
